--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="container-fluid body-color">
+<body>
     <div class="container">
         <div class="overflow-x-auto overflow-y-hidden d-flex customNav py-4">
             <div class="d-flex me-4">
