--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamesHomePage
     </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <div class="overflow-x-auto overflow-y-hidden d-flex customNav py-4">
+        <!-- <div class="overflow-x-auto overflow-y-hidden d-flex customNav my-4">
             <div class="d-flex me-4">
                 <img src="./images/th-1.png" alt="" class="img-fluid nav-icon">
                 <a href="" class="btn btn-outline-light rounded-pill col-10 text-end pe-4 shadow-sm bg-white text-dark">
@@ -67,142 +68,197 @@
                     All Games
                 </a>
             </div>
-        </div>
+        </div> -->
 
 
 
-        <div class="row">
-            <div class="col-md-4 rounded py-2 px-1 games-like">
+        <div class="row pt-5">
+            <div class="col-md-3 rounded py-2 px-1 games-like">
                 <h5><img src="images/fire.webp" alt="">Games you may like</h5>
                 <div class="overflow-y-auto overflow-x-hidden">
                     <div class="px-2">
-                        <a href="#" class="row p-2 hover-class col-12">
+                        <a href="https://haquedot.me/Games/FruitGame" class="row p-2 hover-class col-12">
                             <div class="col-md-3 p-0">
-                                <img class="img-fluid rounded" src="images/chess.webp" alt="">
+                                <img class="img-fluid rounded" src="images/fruitGame.png" alt="">
                             </div>
                             <div class="col-md-9 d-flex">
-                                Master Chess
+                                Fruit Game
                             </div>
                         </a>
-                        <a href="#" class="row p-2 hover-class col-12">
+                        <a href="https://haquedot.me/Games/AnimalGame" class="row p-2 hover-class col-12">
                             <div class="col-md-3 p-0">
-                                <img class="img-fluid rounded" src="images/bubble.webp" alt="">
+                                <img class="img-fluid rounded" src="images/animalGame.png" alt="">
                             </div>
                             <div class="col-md-9 d-flex">
-                                Master Chess
+                                Animal Game
                             </div>
                         </a>
-                        <a href="#" class="row p-2 hover-class col-12">
+                        <a href="https://haquedot.me/Games/VehicleGame" class="row p-2 hover-class col-12">
                             <div class="col-md-3 p-0">
-                                <img class="img-fluid rounded" src="images/solitaire.webp" alt="">
+                                <img class="img-fluid rounded" src="images/vehicleGame.svg" alt="">
                             </div>
                             <div class="col-md-9 d-flex">
-                                Master Chess
+                                Vehicle Game
                             </div>
                         </a>
-                        <a href="#" class="row p-2 hover-class col-12">
+                        <a href="http://hibbanur-rahman.me/push-pull" class="row p-2 hover-class col-12">
                             <div class="col-md-3 p-0">
-                                <img class="img-fluid rounded" src="images/gardentales.webp" alt="">
+                                <img class="img-fluid rounded" src="images/push-pull.jpg" alt="">
                             </div>
                             <div class="col-md-9 d-flex">
-                                Master Chess
+                                Push and Pull
                             </div>
                         </a>
-                        <a href="#" class="row p-2 hover-class col-12">
+                        <a href="https://yazdanrizwan.github.io/Colour-Match" class="row p-2 hover-class col-12">
                             <div class="col-md-3 p-0">
-                                <img class="img-fluid rounded" src="images/golddigger.webp" alt="">
+                                <img class="img-fluid rounded" src="images/color-match.png" alt="">
                             </div>
                             <div class="col-md-9 d-flex">
-                                Master Chess
+                                Color Match
                             </div>
                         </a>
-                        <a href="#" class="row p-2 hover-class col-12">
+                        <a href="http://hibbanur-rahman.me/identify-objects" class="row p-2 hover-class col-12">
                             <div class="col-md-3 p-0">
-                                <img class="img-fluid rounded" src="images/wallyjump.webp" alt="">
+                                <img class="img-fluid rounded" src="images/common-object-identify.png" alt="">
                             </div>
                             <div class="col-md-9 d-flex">
-                                Master Chess
+                                Identify Objects
                             </div>
                         </a>
-                        <a href="#" class="row p-2 hover-class col-12">
+                        <a href="http://hibbanur-rahman.me/common-object" class="row p-2 hover-class col-12">
                             <div class="col-md-3 p-0">
-                                <img class="img-fluid rounded" src="images/jawel.webp" alt="">
+                                <img class="img-fluid rounded" src="images/common-object-yazdan.png" alt="">
                             </div>
                             <div class="col-md-9 d-flex">
-                                Master Chess
+                                Common Object
                             </div>
                         </a>
-                        <a href="#" class="row p-2 hover-class col-12">
+                        <a href="http://hibbanur-rahman.me/edible-non-edible" class="row p-2 hover-class col-12">
                             <div class="col-md-3 p-0">
-                                <img class="img-fluid rounded" src="images/boxing.webp" alt="">
+                                <img class="img-fluid rounded" src="images/edible-non-edible.webp" alt="">
                             </div>
                             <div class="col-md-9 d-flex">
-                                Master Chess
+                                Edible or Non Edible
                             </div>
                         </a>
-                        <a href="#" class="row p-2 hover-class col-12">
+                        <a href="https://yazdanrizwan.github.io/FindColor" class="row p-2 hover-class col-12">
                             <div class="col-md-3 p-0">
-                                <img class="img-fluid rounded" src="images/fashion.webp" alt="">
+                                <img class="img-fluid rounded" src="images/find-color.png" alt="">
                             </div>
                             <div class="col-md-9 d-flex">
-                                Master Chess
+                                Find Color
                             </div>
                         </a>
-                        <!-- <a href="#" class="row p-2 rounded hover-class col-12">
-                        <div class="col-md-3 p-0">
-                            <img class="img-fluid rounded" src="images/chess.webp" alt="">
-                        </div>
-                        <div class="col-md-9 d-flex">
-                            Master Chess
-                        </div>
-                    </a>
-                    <a href="#" class="row p-2 rounded hover-class col-12">
-                        <div class="col-md-3 p-0">
-                            <img class="img-fluid rounded" src="images/chess.webp" alt="">
-                        </div>
-                        <div class="col-md-9 d-flex">
-                            Master Chess
-                        </div>
-                    </a> -->
                     </div>
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-9">
                 <div class="rounded staff-picks ">
                     <h3 class="d-flex"><img src="images/picks.png" width="40px" alt=""> Staff picks</h3>
                     <div class="row p-2">
                         <div class="col-md-6 d-flex p-0">
                             <div class="col-6 p-3">
-                                <img src="images/farmvally.webp" alt="" class="img-fluid rounded">
+                                <a href="https://haquedot.me/Games/FruitGame">
+                                    <img src="images/fruitGame.png" alt="" class="img-fluid rounded">
+                                </a>
                             </div>
                             <div class="col-6 p-3">
-                                <img src="images/bubble.webp" alt="" class="img-fluid rounded">
+                                <a href="https://haquedot.me/Games/AnimalGame">
+                                    <img src="images/animalGame.png" alt="" class="img-fluid rounded">
+                                </a>
                             </div>
                         </div>
                         <div class="col-md-6 d-flex p-0">
                             <div class="col-6 p-3">
-                                <img src="images/fruity.webp" alt="" class="img-fluid rounded">
+                                <a href="https://haquedot.me/Games/VehicleGame">
+                                    <img src="images/vehicleGame.svg" alt="" class="img-fluid rounded">
+                                </a>
                             </div>
                             <div class="col-6 p-3">
-                                <img src="images/mergestkingdon.webp" alt="" class="img-fluid rounded">
+                                <a href="http://hibbanur-rahman.me/push-pull">
+                                    <img src="images/push-pull.jpg" alt="" class="img-fluid rounded">
+                                </a>
                             </div>
                         </div>
                     </div>
                     <div class="row p-2">
                         <div class="col-md-6 d-flex p-0">
                             <div class="col-6 p-3">
-                                <img src="images/tropicalmerge.webp" alt="" class="img-fluid rounded">
+                                <a href="https://yazdanrizwan.github.io/Colour-Match">
+                                    <img src="images/color-match.png" alt="" class="img-fluid rounded">
+                                </a>
                             </div>
                             <div class="col-6 p-3">
-                                <img src="images/wallyjump.webp" alt="" class="img-fluid rounded">
+                                <a href="http://hibbanur-rahman.me/identify-objects">
+                                    <img src="images/common-object-identify.png" alt="" class="img-fluid rounded">
+                                </a>
                             </div>
                         </div>
                         <div class="col-md-6 d-flex p-0">
                             <div class="col-6 p-3">
-                                <img src="images/gardentales.webp" alt="" class="img-fluid rounded">
+                                <a href="http://hibbanur-rahman.me/common-object/">
+                                    <img src="images/common-object-yazdan.png" alt="" class="img-fluid rounded">
+                                </a>
                             </div>
                             <div class="col-6 p-3">
-                                <img src="images/jawel.webp" alt="" class="img-fluid rounded">
+                                <a href="http://hibbanur-rahman.me/edible-non-edible">
+                                    <img src="images/edible-non-edible.webp" alt="" class="img-fluid rounded">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="rounded staff-picks mt-3">
+                    <h3 class="d-flex"><img src="images/fire.webp" width="40px" alt=""> Recommended for you</h3>
+                    <div class="row p-2">
+                        <div class="col-md-6 d-flex p-0">
+                            <div class="col-6 p-3">
+                                <a href="https://yazdanrizwan.github.io/FindColor">
+                                    <img src="images/find-color.png" alt="" class="img-fluid rounded">
+                                </a>
+                            </div>
+                            <div class="col-6 p-3">
+                                <a href="https://haquedot.me/Games/AnimalGame">
+                                    <img src="images/animalGame.png" alt="" class="img-fluid rounded">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-6 d-flex p-0">
+                            <div class="col-6 p-3">
+                                <a href="https://haquedot.me/Games/VehicleGame">
+                                    <img src="images/vehicleGame.svg" alt="" class="img-fluid rounded">
+                                </a>
+                            </div>
+                            <div class="col-6 p-3">
+                                <a href="http://hibbanur-rahman.me/push-pull">
+                                    <img src="images/push-pull.jpg" alt="" class="img-fluid rounded">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row p-2">
+                        <div class="col-md-6 d-flex p-0">
+                            <div class="col-6 p-3">
+                                <a href="https://yazdanrizwan.github.io/Colour-Match">
+                                    <img src="images/color-match.png" alt="" class="img-fluid rounded">
+                                </a>
+                            </div>
+                            <div class="col-6 p-3">
+                                <a href="http://hibbanur-rahman.me/identify-objects">
+                                    <img src="images/common-object-identify.png" alt="" class="img-fluid rounded">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-6 d-flex p-0">
+                            <div class="col-6 p-3">
+                                <a href="http://hibbanur-rahman.me/common-object/">
+                                    <img src="images/common-object-yazdan.png" alt="" class="img-fluid rounded">
+                                </a>
+                            </div>
+                            <div class="col-6 p-3">
+                                <a href="http://hibbanur-rahman.me/edible-non-edible">
+                                    <img src="images/edible-non-edible.webp" alt="" class="img-fluid rounded">
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -210,7 +266,9 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
