--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <h5><img src="images/fire.webp" alt="">Games you may like</h5>
                 <div class="overflow-y-auto overflow-x-hidden">
                     <div class="px-2">
-                        <a href="https://haquedot.me/Games/FruitGame" class="row p-2 hover-class col-12">
+                        <a href="https://haquedot.me/FruitGame" class="row p-2 hover-class col-12">
                             <div class="col-md-3 p-0">
                                 <img class="img-fluid rounded" src="images/fruitGame.png" alt="">
                             </div>
@@ -85,7 +85,7 @@
                                 Fruit Game
                             </div>
                         </a>
-                        <a href="https://haquedot.me/Games/AnimalGame" class="row p-2 hover-class col-12">
+                        <a href="https://haquedot.me/AnimalGame" class="row p-2 hover-class col-12">
                             <div class="col-md-3 p-0">
                                 <img class="img-fluid rounded" src="images/animalGame.png" alt="">
                             </div>
@@ -93,7 +93,7 @@
                                 Animal Game
                             </div>
                         </a>
-                        <a href="https://haquedot.me/Games/VehicleGame" class="row p-2 hover-class col-12">
+                        <a href="https://haquedot.me/VehicleGame" class="row p-2 hover-class col-12">
                             <div class="col-md-3 p-0">
                                 <img class="img-fluid rounded" src="images/vehicleGame.svg" alt="">
                             </div>
@@ -158,19 +158,19 @@
                     <div class="row p-2">
                         <div class="col-md-6 d-flex p-0">
                             <div class="col-6 p-3">
-                                <a href="https://haquedot.me/Games/FruitGame">
+                                <a href="https://haquedot.me/FruitGame">
                                     <img src="images/fruitGame.png" alt="" class="img-fluid rounded">
                                 </a>
                             </div>
                             <div class="col-6 p-3">
-                                <a href="https://haquedot.me/Games/AnimalGame">
+                                <a href="https://haquedot.me/AnimalGame">
                                     <img src="images/animalGame.png" alt="" class="img-fluid rounded">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6 d-flex p-0">
                             <div class="col-6 p-3">
-                                <a href="https://haquedot.me/Games/VehicleGame">
+                                <a href="https://haquedot.me/VehicleGame">
                                     <img src="images/vehicleGame.svg" alt="" class="img-fluid rounded">
                                 </a>
                             </div>
@@ -218,14 +218,14 @@
                                 </a>
                             </div>
                             <div class="col-6 p-3">
-                                <a href="https://haquedot.me/Games/AnimalGame">
+                                <a href="https://haquedot.me/AnimalGame">
                                     <img src="images/animalGame.png" alt="" class="img-fluid rounded">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6 d-flex p-0">
                             <div class="col-6 p-3">
-                                <a href="https://haquedot.me/Games/VehicleGame">
+                                <a href="https://haquedot.me/VehicleGame">
                                     <img src="images/vehicleGame.svg" alt="" class="img-fluid rounded">
                                 </a>
                             </div>
